--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ torch==2.5.1
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
+transformers>=4.36.0
+datasets>=2.16.0
+pytorch-lightning>=2.1.0
+accelerate>=0.25.0
