--- a/.gitignore
+++ b/.gitignore
@@ -99,10 +99,6 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -132,6 +128,18 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
+
+# data
+data/*
+!make_dataset.py
+
+lightning_logs/
+
+models/checkpoints/
+
+my_cache/
+
+tree.txt
 
 # SageMath parsed files
 *.sage.py
