rename dockerignore file

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
 # Ignore data files
 data/
 
-# Ignore model files (if they are not needed in the image)
+# Ignore model files
 models/
 
 # Ignore logs
