--- a/.gitignore
+++ b/.gitignore
@@ -135,9 +135,21 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
-# data
+# Ignore all files in the data directory
 data/*
-!make_dataset.py
+
+# Exclude the README.md file
+!data/README.md
+
+# Exclude the test, train, and validation folders
+!data/test/
+!data/train/
+!data/validation/
+
+# Exclude .gitkeep files in the test, train, and validation folders
+!data/test/.gitkeep
+!data/train/.gitkeep
+!data/validation/.gitkeep
 
 lightning_logs/
 
