--- a/requirements_predict.txt
+++ b/requirements_predict.txt
@@ -1,8 +1,8 @@
 fastapi>=0.95.0
 uvicorn>=0.21.0
 torch>=2.0.0
+pytorch-lightning>=2.0.0
 transformers>=4.30.0
 google-cloud-storage>=2.0.0
 pydantic>=1.10.0
 httpx>=0.20.0
-
