--- a/requirements_predict.txt
+++ b/requirements_predict.txt
@@ -5,4 +5,5 @@ pytorch-lightning>=2.0.0
 transformers>=4.30.0
 google-cloud-storage>=2.0.0
 pydantic>=1.10.0
+python-multipart>=0.0.20
 httpx>=0.20.0
