--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dynamic = ["dependencies", "optional-dependencies"]
 
+[tool.setuptools]
+packages = {find = {where = ["."]}} # Automatically find all packages in the project
+package-dir = {"" = "."}  # Root directory as the base for packages
+
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 
