--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,8 @@
 # Note that the Cloud Build trigger has been created in a staging area to make sure it is working as expected before deploying to production.
 
-options:
-  logging: CLOUD_LOGGING_ONLY
-  
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}', '.']
+    args: ['build', '-t', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}', '-f', 'predict.dockerfile', '.']
     id: 'Build Docker Image'
 
   - name: 'gcr.io/cloud-builders/docker'
@@ -16,10 +13,11 @@ steps:
     args: ['gcloud', 'run', 'deploy', '${_SERVICE_NAME}', '--image', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}', '--region', '${_REGION}', '--platform', 'managed', '--allow-unauthenticated']
     id: 'Deploy to Cloud Run'
 
-timeout: '1200s'
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 substitutions:
   _REGION: 'europe-west1'
   _ARTIFACT_REPO: 'dtu-mlops-registry'
-  _SERVICE_NAME: 'bart-summarizer-staging'  
-  _TAG: 'latest'  
+  _SERVICE_NAME: 'bart-summarizer-staging'
+  _TAG: 'latest'
