--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,12 +25,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: setup.py
+          cache-dependency-path: pyproject.toml
 
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
+          pip install -r requirements_tests.txt
           pip install torch pytest coverage nltk datasets
           python -c "import nltk; nltk.download('wordnet')"
           pip install -e .
