--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,16 +25,27 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: setup.py
+          cache-dependency-path: requirements.txt
 
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
-          pip list
+          pip install -r requirements_tests.txt
+          pip install -e .
 
+      - name: Debug Installed Packages
+        run: |
+          pip list | grep dtu_mlops_group32_project
+          python -c "import sys; print(sys.path)"
+          python -c "import dtu_mlops_group32_project; print(dtu_mlops_group32_project.__file__)"
+
+      - name: Debug pytest collection
+        run: |
+          pytest --collect-only -v
 
       - name: Run tests & coverage
         run: |
-          coverage run -m pytest tests/
+          export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
+          coverage run -m pytest tests/ -v
           coverage report -m
