--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,5 +37,4 @@ jobs:
 
       - name: Run tests & coverage
         run: |
-          coverage run -m pytest tests/ -v
-          coverage report -m
+          pytest --ignore=src
