--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,10 @@
 # Note: that the Cloud Build trigger has been created in a staging area to make sure it is working as expected before deploying to production.
+# therefore, the image has been re-created from previously existing image in Artifact Registry.
 # Note: added approval before triggering re-build, but could also consider manual trigger or delayed trigger.
 
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}', '-f', 'predict.dockerfile', '.']
-    id: 'Build Docker Image'
-
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}']
-    id: 'Push Docker Image'
-
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    args: ['gcloud', 'run', 'deploy', '${_SERVICE_NAME}', '--image', '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REPO}/${_SERVICE_NAME}:${_TAG}', '--region', '${_REGION}', '--platform', 'managed', '--allow-unauthenticated']
+    args: ['gcloud', 'run', 'deploy', '${_SERVICE_NAME}', '--image', '${_PROD_IMAGE}', '--region', '${_REGION}', '--platform', 'managed', '--allow-unauthenticated']
     id: 'Deploy to Cloud Run'
 
 options:
@@ -19,6 +12,5 @@ options:
 
 substitutions:
   _REGION: 'europe-west1'
-  _ARTIFACT_REPO: 'dtu-mlops-registry'
   _SERVICE_NAME: 'bart-summarizer-staging'
-  _TAG: 'latest'
+  _PROD_IMAGE: 'europe-west1-docker.pkg.dev/plucky-mode-447809-r7/dtu-mlops-registry/bart-summarizer:latest'
