--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,8 @@ requires-python = ">=3.11"
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-packages = [
-  "app",
-  {find = {where = "src"}}
-]
+packages = {find = {where = ["src"]}}
+
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 
