--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,19 @@ torch==2.5.1
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
+nltk==3.9.1
+argparse==1.1
+datasets==3.2.0
+pytorch_lightning==2.5.0.post0
+transformers==4.48.0
+re==2.2.1
+pydantic==2.9.2
+joblib==1.4.2
+numpy==2.2.0
+wandb==0.19.3
+loguru==0.7.2
+invoke==2.2.0
 dvc==3.58.0
 dvc-gdrive==3.0.1
+pytest==8.3.3
 transformers==4.48.0
