--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -39,5 +39,5 @@ jobs:
 
       - name: Run tests & coverage
         run: |
-          pytest
+          coverage run -m pytest
           coverage report -m
