--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -39,5 +39,4 @@ jobs:
 
       - name: Run tests & coverage
         run: |
-          coverage run -m pytest
-          coverage report -m --skip-covered --no-source
+          pytest
